Update qupath v0.5.0 (#33)
* fixes typo

* adds troubleshooting in case of image pair writer error

* minor gradle updates

* update installation class for qp0.5.0

* refactoring for qupath 0.5.0

* force scripts to be added in order

* fixes move to 0.5.0 and code formatting

* version bump